--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -35,6 +35,6 @@ jobs:
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
-        git add .github/profile/README.md
+        git add ./profile/README.md
         git commit -m "Update README with nightly repository status"
         git push
